Sheetrock added to the project.

--- a/index-dev.html
+++ b/index-dev.html
@@ -20,8 +20,9 @@
                 "lib/js/thirdparty/underscore.js",
                 "lib/js/thirdparty/jquery.gridster.js",
                 "lib/js/thirdparty/jquery.caret.js",
-				"lib/js/thirdparty/codemirror.js",
-				"lib/js/thirdparty/jquery.xdomainrequest.js",
+        				"lib/js/thirdparty/codemirror.js",
+        				"lib/js/thirdparty/jquery.xdomainrequest.js",
+                "lib/js/thirdparty/sheetrock.min.js",
 
                 "lib/js/freeboard/FreeboardModel.js",
                 "lib/js/freeboard/DatasourceModel.js",
@@ -36,6 +37,7 @@
                 "lib/js/freeboard/freeboard.js",
 
                 "plugins/freeboard/freeboard.datasources.js",
+                "plugins/appsilon/appsilon.datasources.js",
                 "plugins/freeboard/freeboard.widgets.js",
                 "examples/plugin_example.js",
 
